# previous_test

./: README.md
include/: README.txt
source/: CMakeLists.txt
source/cli/: CMakeLists.txt  cli_main.cpp
source/common/: CMakeLists.txt  common.h  compat_cstdint.h  opencl_wrapper.h  sqlite_wrapper.h  threading_wrapper.cpp  threading_wrapper.h
source/gui/: CMakeLists.txt
source/gui/MFCDlgMainApp/: CMakeLists.txt  MFCMainApp.cpp  MFCMainApp.h  MFCMainApp.rc  MFCMainDlg.cpp  MFCMainDlg.h  resource.h  stdafx.cpp  stdafx.h  targetver.h
source/gui/MFCDlgMainApp/res/: MFCMainApp.rc2
